D7082E-Rust/AbhiLTU2026-test.txt
https://vesuvio-git.neteq.ltu.se/AbhiLTU2026/d7082e_lab1/-/issues/2

Update the link to the new API used below.

Rng trait https://docs.rs/rand/latest/rand/trait.Rng.html
i think this link is wrong
the correct link i think is:

Update the link to the new API used below.

random_range
https://docs.rs/rand/0.9.2/rand/fn.random_range.html

ERROR WHILE RUNNING cargo run

steven@steven-xubuntu:~/Desktop/RUST-D7082E/d7082e_lab1$ cargo run
   Compiling d7082e_lab1 v0.1.0 (/home/steven/Desktop/RUST-D7082E/d7082e_lab1)
error[E0432]: unresolved import `rand`
 --> src/main.rs:7:5
  |
7 | use rand::Rng;
  |     ^^^^ use of unresolved module or unlinked crate `rand`
  |
  = help: if you wanted to use a crate named `rand`, use `cargo add rand` to add it to your `Cargo.toml`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `rand`
  --> src/main.rs:44:25
   |
44 |     let secret_number = rand::thread_rng().gen_range(1..=100);
   |                         ^^^^ use of unresolved module or unlinked crate `rand`
   |
   = help: if you wanted to use a crate named `rand`, use `cargo add rand` to add it to your `Cargo.toml`

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `d7082e_lab1` (bin "d7082e_lab1") due to 2 previous errors
steven@steven-xubuntu:~/Desktop/RUST-D7082E/d7082e_lab1$ 

We have to run the command cargo add rand
and then run the command cargo run

The program stops after one guess so the Allowing Multiple Guesses with Looping is not implemented
